# CVG-Neuron

./: .cleargeo-compliance  .cleargeo-pre-commit-hook  .dockerignore  .env.example  .gitignore  Dockerfile  Modelfile  Modelfile.qnative  README.md  _debug_config.py  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements-web.txt  requirements.txt  setup.cfg  test_comprehensive.py  test_full.py  test_login.py  test_login2.py  test_login3.py  test_login4.py  test_login5.py  write_memory.py
app/: __init__.py  main.py
app/core/: __init__.py  config.py  logger.py  security.py
app/memory/: __init__.py  neuro_cache.py
app/models/: __init__.py  agent.py  response.py  task.py
app/orchestrator/: __init__.py  agent_registry.py  cognitive_processor.py  neuron_orchestrator.py  task_router.py
app/routers/: __init__.py  info.py  (+9 more)
config/: neuron_config.yml.example
cvg_neuron/: __init__.py  hive.py  identity.py  integrations.py  intelligence.py  knowledge.py  memory.py  tunnel.py  web_api.py
docs/: CLOUDFLARE_NS_SETUP.md  DNS_MIGRATION_PLAYBOOK.md
neuron/: __init__.py  cluster.py  config.py  context_builder.py  dns_manager.py  edge_connector.py  forge_manager.py  history_harvester.py  hive0_telemetry.py  hive_preloader.py  identity.py  memory.py  memory_capture.py  mind.py  ollama_client.py  project_feeder.py  prompt_library.py  routes_extended.py  web_api.py
scripts/: cloudflare_dns_setup.py  cvg_capture.ps1  cvg_capture.sh  cvg_push_agent.py  deploy_hive_agents.sh  dns_audit.ps1  dns_audit.sh  health_check.ps1  watchdog.ps1
static/: index.html  test2.txt
(+8 files in other folders)
