# =============================================================================
# CVG Neuron — Build Configuration
# (c) Clearview Geographic LLC — Proprietary
# =============================================================================

[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "cvg-neuron"
version         = "2.0.0"
description     = "CVG Neuron — AI Orchestration System for Clearview Geographic LLC"
requires-python = ">=3.11"
readme          = "README.md"
license         = { text = "Proprietary" }
authors         = [{ name = "Alex Zelenski, GISP", email = "azelenski@clearviewgeographic.com" }]
classifiers     = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies    = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "aiofiles>=23.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cvg_neuron*", "neuron*"]
